[gd_scene load_steps=14 format=2]

[ext_resource path="res://Jogador/Jogador.gd" type="Script" id=1]
[ext_resource path="res://addons/Controles2D/ControleSideScrolling2D.gd" type="Script" id=2]
[ext_resource path="res://addons/Controles2D/ControleTopDown2D.gd" type="Script" id=3]
[ext_resource path="res://addons/Controles2D/Testes/OpcoesTopDown.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Controles2D/Testes/OpcoesSideScrolling.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/Controles2D/ControlePulo2D.gd" type="Script" id=6]
[ext_resource path="res://addons/Controles2D/Testes/OpcoesPulo.tscn" type="PackedScene" id=7]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.513636 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.53
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
flatness = 1.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.53
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 20.0
flatness = 1.0
gravity = Vector3( 0, -30, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.53
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 3 )

[sub_resource type="CapsuleShape2D" id=7]

[node name="Jogador" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprites" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="sprites"]
position = Vector2( -0.2, 3.05556 )
scale = Vector2( 1.2, 1.13889 )
polygon = PoolVector2Array( -5, 14, -3, -1, -3, -8, -7.33333, -2.68293, -9, -4, -3.16667, -10.5854, -1, -11, -1, -13, -4, -15, -4, -20, 0, -22, 4, -20, 4, -15, 1, -13, 1, -11, 11, -11, 11, -8, 2, -8, 2, -4.57386, 2, -1, 5, 14, 2, 14, 0, 2, -2, 14 )

[node name="ParticulasCorrer" type="Particles2D" parent="."]
position = Vector2( 0, 19 )
emitting = false
amount = 10
local_coords = false
process_material = SubResource( 4 )

[node name="ParticulasPulo1" type="Particles2D" parent="."]
position = Vector2( 0, 19 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="ParticulasPulo2" type="Particles2D" parent="."]
position = Vector2( 0, 19 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )

[node name="ControleSideScroling2D" type="Node2D" parent="."]
script = ExtResource( 2 )
tratar_gravidade = false
multiplicador_de_gravidade = 0.5

[node name="OpcoesSideScrolling" parent="ControleSideScroling2D" instance=ExtResource( 5 )]

[node name="ControleTopDown2D" type="Node2D" parent="."]
script = ExtResource( 3 )
ativo = false

[node name="OpcoesTopDown" parent="ControleTopDown2D" instance=ExtResource( 4 )]
visible = false

[node name="ControlePulo2D" type="Node2D" parent="."]
script = ExtResource( 6 )
multiplicador_de_gravidade = 0.5

[node name="OpcoesPulo" parent="ControlePulo2D" instance=ExtResource( 7 )]

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Hud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -264.0
margin_top = 21.0
margin_right = -224.0
margin_bottom = 61.0
rect_scale = Vector2( 0.960674, 0.759503 )

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Hud/Control/HBoxContainer"]
margin_top = 13.0
margin_right = 98.0
margin_bottom = 27.0
text = "Modo Controle:"

[node name="OptionModo" type="OptionButton" parent="Hud/Control/HBoxContainer"]
margin_left = 102.0
margin_right = 212.0
margin_bottom = 40.0
focus_mode = 0
text = "SideScrolling"
items = [ "SideScrolling", null, false, 0, null, "TopDown", null, false, 1, null ]
selected = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[connection signal="chao_atingido" from="ControleSideScroling2D" to="." method="_on_ControleSideScroling2D_chao_atingido"]
[connection signal="corrida_finalizada" from="ControleSideScroling2D" to="." method="_on_ControleSideScroling2D_corrida_finalizada"]
[connection signal="corrida_iniciada" from="ControleSideScroling2D" to="." method="_on_ControleSideScroling2D_corrida_iniciada"]
[connection signal="corrida_finalizada" from="ControleTopDown2D" to="." method="_on_ControleTopDown2D_corrida_finalizada"]
[connection signal="corrida_iniciada" from="ControleTopDown2D" to="." method="_on_ControleTopDown2D_corrida_iniciada"]
[connection signal="item_selected" from="Hud/Control/HBoxContainer/OptionModo" to="." method="_on_OptionModo_item_selected"]
